--- a/index.html
+++ b/index.html
@@ -530,11 +530,114 @@
         </div>
     </section><!-- End Portfolio Section -->
 
+    <section id="mgt" class="wow fadeInUp">
+        <div class="container">
+            <div class="section-header">
+                <h2>Management</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/liaz.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Muhammad Tajul Islam</h4>
+                            <span>Manging Director & CEO</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/safiur.jpg" width="230" height="270"></div>
+                        <div class="details">
+                            <h4>Safiur Rahman Khan</h4>
+                            <span>Manager (Operations & Oversight)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/teams/mahfuz.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Mahfuj Mamun</h4>
+                            <span>Sr. Executive Officer (Business Promotion & Support)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/teams/rikon.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Roknuzzaman Rikon</h4>
+                            <span>Executive Officer (Business Promotion & Support)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Jan-E-Alam</h4>
+                            <span>Manager (Accounts)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" alt=""></div>
+                        <div class="details">
+                            <h4>Abu Hossain</h4>
+                            <span>Executive Officer (Business Promotion & Support)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section><!-- End Management Section -->
 
     <section id="team" class="wow fadeInUp">
         <div class="container">
             <div class="section-header">
-                <h2>Our Team</h2>
+                <h2>Tech Team</h2>
             </div>
 
             <!--<div class="col-lg-3 col-md-6">
@@ -708,115 +811,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/mahfuz.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Mahfuj Mamun</h4>
-                            <span>Sr. Brand Marketing Exe.</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
 
         </div>
     </section><!-- End Team Section -->
 
-    <section id="mgt" class="wow fadeInUp">
-        <div class="container">
-            <div class="section-header">
-                <h2>Management</h2>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/mgt/liaz.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Muhammad Tajul Islam</h4>
-                            <span>Manging Director & CEO</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/mgt/safiur.jpg" width="230" height="270"></div>
-                        <div class="details">
-                            <h4>Safiur Rahman Khan</h4>
-                            <span>Manager (Operations & Oversight)</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/rikon.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Roknuzzaman Rikon</h4>
-                            <span>Sr. Executive Officer (Business Promotion & Support)</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Jan-E-Alam</h4>
-                            <span>Manager (Accounts)</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" alt=""></div>
-                        <div class="details">
-                            <h4>Abu Hossain</h4>
-                            <span>Executive Officer (Business Promotion & Support)</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section><!-- End Management Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="wow fadeInUp">
