new clients added

--- a/index.html
+++ b/index.html
@@ -394,9 +394,12 @@
                 <img style="padding: 10px" src="assets/img/clients/bafsj.png" alt="">
                 <img style="padding: 10px" src="assets/img/clients/dp-logo.jpg" alt="">
                 <img style="padding: 10px" src="assets/img/clients/son.jpg" alt="">
-                <!--<img style="padding: 10px" src="assets/img/clients/client-6.png" alt="">
-                <img style="padding: 10px" src="assets/img/clients/client-7.png" alt="">
-                <img style="padding: 10px" src="assets/img/clients/client-8.png" alt="">-->
+                <img style="padding: 10px" src="assets/img/clients/primate.png" alt="">
+                <img style="padding: 10px" src="assets/img/clients/retina.png" alt="">
+                <img style="padding: 10px" src="assets/img/clients/kinn.png" alt="">
+                <img style="padding: 10px" src="assets/img/clients/intisar.png" alt="">
+                <img style="padding: 10px" src="assets/img/clients/hs.png" alt="">
+                <img style="padding: 10px" src="assets/img/clients/taora.png" alt="">
             </div>
 
         </div>
