--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                 <div class="col-lg-6 content tv-info-list">
                     <h4>Inspiration</h4>
-                    <p style="text-align: justify;">
+                    <p class="text-justify">
                         &#2438;&#2478;&#2494;&#2470;&#2503;&#2480; &#2470;&#2503;&#2486; &#2476;&#2494;&#2434;&#2482;&#2494;&#2470;&#2503;&#2486;&#2404;
                         <br/>
                         &#2438;&#2478;&#2494;&#2470;&#2503;&#2480; &#2474;&#2509;&#2480;&#2495;&#2527; &#2447; &#2470;&#2503;&#2486;
@@ -189,7 +189,9 @@
                             &#2472;&#2494;&#2404;
                         </li>
                     </ul>
-
+                    <p class="text-justify">
+                        &#2453;&#2495;&#2472;&#2509;&#2468;&#2497; &#2476;&#2480;&#2509;&#2468;&#2478;&#2494;&#2472;&#2503; &#2453;&#2478;&#2509;&#2474;&#2495;&#2441;&#2463;&#2494;&#2480; &#2451; &#2439;&#2472;&#2509;&#2463;&#2494;&#2480;&#2472;&#2503;&#2463;&#2503;&#2480; &#2488;&#2489;&#2460;&#2482;&#2477;&#2509;&#2479;&#2468;&#2494; &#2451; &#2463;&#2503;&#2453; &#2465;&#2495;&#2477;&#2494;&#2439;&#2488;&#2503;&#2480; &#2488;&#2494;&#2469;&#2503; &#2488;&#2476; &#2486;&#2509;&#2480;&#2503;&#2467;&#2496;&#2480; &#2478;&#2494;&#2472;&#2497;&#2487;&#2503;&#2480; &#2437;&#2476;&#2495;&#2480;&#2494;&#2478; &#2439;&#2472;&#2509;&#2463;&#2494;&#2480;&zwj;&#2509;&#2479;&#2494;&#2453;&#2486;&#2472; &#2476;&#2503;&#2524;&#2503; &#2455;&#2503;&#2459;&#2503; &#2437;&#2472;&#2503;&#2453; &#2455;&#2497;&#2472; &#2404; &#2468;&#2494;&#2439; &#2438;&#2480; &#2470;&#2503;&#2480;&#2495; &#2472;&#2527; &#2438;&#2488;&#2497;&#2472; &#2488;&#2476;&#2494;&#2439; &#2478;&#2495;&#2482;&#2503; &#2463;&#2503;&#2453; &#2476;&#2503;&#2439;&#2460;&#2509;&#2465; &#2437;&#2475;&#2495;&#2488; &#2476;&#2494; &#2474;&#2509;&#2480;&#2468;&#2495;&#2487;&#2509;&#2464;&#2494;&#2472;&#2503;&#2480; &#2470;&#2495;&#2453;&#2503; &#2437;&#2455;&#2509;&#2480;&#2488;&#2480; &#2489;&#2439; &#2404; &#2438;&#2478;&#2480;&#2494; &#2438;&#2459;&#2495; &#2438;&#2474;&#2472;&#2494;&#2470;&#2503;&#2480; &#2474;&#2494;&#2486;&#2503; &#2404;
+                    </p>
                 </div>
 
                 <div class="col-lg-6 about-img">
@@ -202,7 +204,7 @@
                     <ul class="list-unstyled tv-info-list">
                         <li>
                             <h4>Vision</h4>
-                            <p>&#2438;&#2478;&#2494;&#2470;&#2503;&#2480; &#2470;&#2503;&#2486;&#2503;&#2480; &#2474;&#2509;&#2480;&#2468;&#2495;&#2487;&#2509;&#2464;&#2494;&#2472;
+                            <p class="text-justify">&#2438;&#2478;&#2494;&#2470;&#2503;&#2480; &#2470;&#2503;&#2486;&#2503;&#2480; &#2474;&#2509;&#2480;&#2468;&#2495;&#2487;&#2509;&#2464;&#2494;&#2472;
                                 &#2455;&#2497;&#2482;&#2507;&#2453;&#2503; &#2488;&#2475;&#2463;&#2451;&#2527;&#2509;&#2479;&#2494;&#2480;
                                 &#2476;&#2509;&#2479;&#2494;&#2476;&#2489;&#2494;&#2480;&#2503; &#2441;&#2470;&#2509;&#2476;&#2497;&#2470;&#2509;&#2471;
                                 &#2453;&#2480;&#2494;&#2480; &#2460;&#2472;&#2509;&#2479; &#2478;&#2495;&#2472;&#2495;&#2478;&#2494;&#2478;
@@ -214,7 +216,7 @@
                         <li>
                             <h4>Creativity</h4>
 
-                            <p>&#2438;&#2478;&#2494;&#2470;&#2503;&#2480; &#2478;&#2488;&#2509;&#2468;&#2495;&#2487;&#2509;&#2453;&#2503;
+                            <p class="text-justify">&#2438;&#2478;&#2494;&#2470;&#2503;&#2480; &#2478;&#2488;&#2509;&#2468;&#2495;&#2487;&#2509;&#2453;&#2503;
                                 &#2479;&#2503;&#2472; &#2488;&#2453;&#2482; &#2476;&#2495;&#2487;&#2527;&#2503;&#2480;
                                 &#2472;&#2495;&#2527;&#2478; &#2453;&#2494;&#2472;&#2497;&#2472; &#2488;&#2503;&#2463;
                                 &#2453;&#2480;&#2503; &#2466;&#2497;&#2453;&#2495;&#2527;&#2503; &#2470;&#2503;&#2527;&#2494;
@@ -240,7 +242,7 @@
                         <li>
                             <h4>Passion</h4>
 
-                            <p>&#2472;&#2495;&#2474;&#2497;&#2472; &#2453;&#2494;&#2460;&#2503;&#2480; &#2474;&#2503;&#2459;&#2472;&#2503;
+                            <p class="text-justify">&#2472;&#2495;&#2474;&#2497;&#2472; &#2453;&#2494;&#2460;&#2503;&#2480; &#2474;&#2503;&#2459;&#2472;&#2503;
                                 &#2482;&#2497;&#2453;&#2495;&#2527;&#2503; &#2469;&#2494;&#2453;&#2503; &#2453;&#2494;&#2480;&#2495;&#2455;&#2480;&#2503;&#2480;
                                 &#2453;&#2494;&#2460;&#2503;&#2480; &#2474;&#2509;&#2480;&#2468;&#2495; &#2437;&#2453;&#2499;&#2468;&#2509;&#2480;&#2495;&#2478;
                                 &#2477;&#2494;&#2482;&#2507;&#2476;&#2494;&#2488;&#2494; &#2404; &#2447;&#2453;&#2503;&#2453;
@@ -263,7 +265,7 @@
                         <li>
                             <h4>Great Solutions</h4>
 
-                            <p>"&#2469;&#2495;&#2457;&#2509;&#2453;&#2495;&#2434; &#2439;&#2460; &#2478;&#2494;&#2488;&#2509;&#2463;
+                            <p class="text-justify">"&#2469;&#2495;&#2457;&#2509;&#2453;&#2495;&#2434; &#2439;&#2460; &#2478;&#2494;&#2488;&#2509;&#2463;
                                 &#2476;&#2495;&#2475;&#2507;&#2480; &#2465;&#2497;&#2439;&#2434; &#2447;&#2472;&#2495;&#2469;&#2495;&#2434;"
                                 &#2404; &#2488;&#2475;&#2463;&#2451;&#2527;&#2509;&#2479;&#2494;&#2480; &#2439;&#2472;&#2509;&#2465;&#2494;&#2488;&#2509;&#2463;&#2509;&#2480;&#2495;&#2468;&#2503;
                                 &#2453;&#2509;&#2487;&#2468;&#2495;&#2480; &#2476;&#2524; &#2453;&#2494;&#2480;&#2467;
@@ -546,10 +548,10 @@
                             <h4>Muhammad Tajul Islam</h4>
                             <span>Manging Director & CEO</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -562,10 +564,10 @@
                             <h4>Safiur Rahman Khan</h4>
                             <span>Manager (Operations & Oversight)</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -577,10 +579,10 @@
                             <h4>Mahfuj Mamun</h4>
                             <span>Sr. Executive Officer (Business Promotion & Support)</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -592,10 +594,10 @@
                             <h4>Roknuzzaman Rikon</h4>
                             <span>Executive Officer (Business Promotion & Support)</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -608,10 +610,10 @@
                             <h4>Jan-E-Alam</h4>
                             <span>Manager (Accounts)</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -619,15 +621,15 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" alt=""></div>
+                        <div class="pic"><img src="assets/img/mgt/abu.jpg" alt=""></div>
                         <div class="details">
                             <h4>Abu Hossain</h4>
                             <span>Executive Officer (Business Promotion & Support)</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -651,9 +653,9 @@
                   <span>Cheif Executive Officer</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -669,10 +671,10 @@
                             <h4>Tause Ali Sikder</h4>
                             <span>Sr. Software Engineer</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -685,10 +687,10 @@
                             <h4>Engr. Shah Paran</h4>
                             <span>Sr. Server Engineer (Linux)</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -701,10 +703,10 @@
                             <h4>Alfaz Hossain</h4>
                             <span>Analyst Programmer</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -717,10 +719,10 @@
                             <h4>Harunor Roshid</h4>
                             <span>Network Administrator</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -736,10 +738,10 @@
                             <h4>Md. Mehedi Hassan</h4>
                             <span>Database Administrator</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -752,10 +754,10 @@
                             <h4>M. E. Khandaker</h4>
                             <span>Database Administrator</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -768,8 +770,9 @@
                             <h4>Shabab Ahmed</h4>
                             <span>Jr. Software Developer</span>
                             <div class="social">
-                                <a href="https://www.facebook.com/cool.peachy"><i class="fa fa-facebook"></i></a>
-                                <a href="https://github.com/shabab239"><i class="fa fa-github"></i></a>
+                                <a href="https://github.com/shabab239" target="_blank"><i class="fa fa-github"></i></a>
+                                <a href="https://linkedin.com/in/shabab239" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/itizwhatitizzZ" target="_blank"><i class="fa fa-facebook"></i></a>
                                 <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
                                 <a href=""><i class="fa fa-linkedin"></i></a>-->
@@ -785,10 +788,10 @@
                         <h4>Moumita Bhuiyan</h4>
                         <span>Jr. Software Engineer</span>
                         <div class="social">
-                            <a href=""><i class="fa fa-twitter"></i></a>
-                            <a href=""><i class="fa fa-facebook"></i></a>
-                            <a href=""><i class="fa fa-google-plus"></i></a>
-                            <a href=""><i class="fa fa-linkedin"></i></a>
+                            <!--<a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                         </div>
                     </div>
                 </div>
@@ -805,10 +808,10 @@
                             <h4>Sadat Ahmed Sadi</h4>
                             <span>Jr. Server Engineer</span>
                             <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
