--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                         <div class="pic"><img src="assets/img/mgt/liaz.jpg" height="270" width="230"></div>
                         <div class="details">
                             <h4>Muhammad Tajul Islam</h4>
-                            <span>Manging Director & CEO</span>
+                            <span>Manging Director</span>
                             <div class="social">
                                 <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -781,26 +781,26 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
+                <!--<div class="col-lg-3 col-md-6">
                 <div class="member">
                     <div class="pic"><img src="assets/img/teams/moumita.jpg" height="270" width="230"></div>
                     <div class="details">
                         <h4>Moumita Bhuiyan</h4>
                         <span>Jr. Software Engineer</span>
                         <div class="social">
-                            <!--<a href=""><i class="fa fa-twitter"></i></a>
+                            &lt;!&ndash;<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>-->
+                                <a href=""><i class="fa fa-linkedin"></i></a>&ndash;&gt;
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
 
 
             </div>
 
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
                         <div class="pic"><img src="assets/img/teams/sium.jpg" height="270" width="230"></div>
@@ -808,16 +808,16 @@
                             <h4>Sadat Ahmed Sadi</h4>
                             <span>Jr. Server Engineer</span>
                             <div class="social">
-                                <!--<a href=""><i class="fa fa-twitter"></i></a>
+                                &lt;!&ndash;<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>-->
+                                <a href=""><i class="fa fa-linkedin"></i></a>&ndash;&gt;
                             </div>
                         </div>
                     </div>
                 </div>
 
-            </div>
+            </div>-->
 
         </div>
     </section><!-- End Team Section -->
@@ -837,10 +837,10 @@
                     <div class="contact-address">
                         <i class="ion-ios-location-outline"></i>
                         <h3>Address</h3>
-                        <address>Address: House 75/5/1 (Flat A4) <br>
-                            East Maniknagar <br>
-                            Jatrabari <br>
-                            Dhaka 1203
+                        <address>Chayanir, 480 <br>
+                            Basundhara Riverview <br>
+                            Hasnabad, South Keraniganj <br>
+                            Dhaka 1321
                         </address>
                     </div>
                 </div>
