whatsapp link add

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Soft-Engine Ltd.</title>
+    <title>Soft Engine Ltd.</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -44,8 +44,9 @@
 <section id="topbar" class="d-none d-lg-block">
     <div class="container clearfix">
         <div class="contact-info float-left">
-            <i class="fa fa-envelope-o"></i> <a href="mailto:info@sebd.co">info@sebd.co</a>
-            <i class="fa fa-phone"></i> +88 01717-659287
+            <i class="fa fa-envelope-o"></i> <a href="mailto:info@sebd.co" target="_blank">info@sebd.co</a>
+            <i class="fa fa-phone"></i> <a href="tel:+8801717659287" target="_blank">+88 01717-659287</a>
+            <i class="fa fa-whatsapp"></i> <a href="https://wa.me/+8801717659287" target="_blank">+88 01717-659287</a>
         </div>
         <div class="social-links float-right">
             <a href="https://www.facebook.com/khomeni404" class="facebook"><i class="fa fa-facebook"></i></a>
@@ -816,10 +817,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>-->
 
-        </div>
     </section><!-- End Team Section -->
 
 
@@ -847,10 +846,14 @@
 
                 <div class="col-md-4">
                     <div class="contact-phone">
+                        <i class="ion-social-whatsapp-outline"></i>
+                        <h3>WhatsApp Us</h3>
+                        <p><a href="https://wa.me/+8801717659287" target="_blank">+88 01717-659287</a></p>
+                        <br>
                         <i class="ion-ios-telephone-outline"></i>
-                        <h3>Phone Number</h3>
-                        <p><a href="tel:+8801717659287">+88 01717-659287</a></p>
-                        <p><a href="tel:+8801717659287">+88 01310-593131</a></p>
+                        <h3>Call Us</h3>
+                        <p><a href="tel:+8801717659287" target="_blank">+88 01717-659287</a></p>
+                        <p><a href="tel:+8801310593131" target="_blank">+88 01310-593131</a></p>
                     </div>
                 </div>
 
@@ -858,10 +861,10 @@
                     <div class="contact-email">
                         <i class="ion-ios-email-outline"></i>
                         <h3>Email</h3>
-                        <p><a href="mailto:khomeni404@gmail.com">khomeni404@gmail.com</a></p>
-                        <p><a href="mailto:info@sebd.co">info@sebd.co</a></p>
-                        <p><a href="mailto:support@sebd.co">support@sebd.co</a></p>
-                        <p><a href="mailto:sales@sebd.co">sales@sebd.co</a></p>
+                        <p><a href="mailto:khomeni404@gmail.com" target="_blank">khomeni404@gmail.com</a></p>
+                        <p><a href="mailto:info@sebd.co" target="_blank">info@sebd.co</a></p>
+                        <p><a href="mailto:support@sebd.co" target="_blank">support@sebd.co</a></p>
+                        <p><a href="mailto:sales@sebd.co" target="_blank">sales@sebd.co</a></p>
                     </div>
                 </div>
 
@@ -927,15 +930,15 @@
         <div class="copyright">
             &copy; Copyright <strong>Soft-Engine</strong>. All Rights Reserved
         </div>
-        <div class="credits">
-            <!--
+        <!--<div class="credits">
+            &lt;!&ndash;
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-          -->
+          &ndash;&gt;
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        </div>-->
     </div>
 </footer><!-- End Footer -->
 
